[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.MODivorceForms"
version = "0.2"
description = ""
readme = "README.md"
authors = [
    { name = "Toby Fey", email = "tobyfey@protonmail.com" },
]
dependencies = [
    "docassemble.AssemblyLine @ git+https://github.com/suffolklitlab/docassemble-AssemblyLine.git@main",
]

[project.urls]
Homepage = "https://docassemble.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
